# Axiom

./: .gitignore  .gitmodules  Axiom.aps  Axiom.rc  CMakeLists.txt  README.md  README_RU.md  VERSION.md
include/Axiom/Camera/: Camera.hpp
include/Axiom/Core/: Application.hpp  Engine.hpp  EngineMode.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Paths.hpp  Time.hpp  Version.hpp  Window.hpp
include/Axiom/DebugTools/: AssetBrowserPanel.hpp  ConsolePanel.hpp  DebugOverlay.hpp  DebugRenderer.hpp  HierarchyPanel.hpp  InspectorPanel.hpp  SceneEditorPanel.hpp  StatisticsPanel.hpp
include/Axiom/Editor/: EditorContext.hpp  EditorFontManager.hpp  EditorFontSettings.hpp  EditorLayer.hpp  EditorUI.hpp
include/Axiom/Editor/Panels/: AssetBrowserPanel.hpp  ConsolePanel.hpp  HierarchyPanel.hpp  InspectorPanel.hpp  PreferencesPanel.hpp  SceneEditorPanel.hpp  StatisticsPanel.hpp
include/Axiom/Editor/Viewport/: Framebuffer.hpp  ViewportPanel.hpp
include/Axiom/Events/: Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  WindowEvent.hpp
include/Axiom/Events/Collision/: CollisionEvent.hpp  TriggerEvent.hpp
include/Axiom/Experimental/: EnemySystem.hpp  PowerSystem.hpp  UISystem.hpp
include/Axiom/Experimental/Game/: GameContext.hpp  GameLayer.hpp  GameState.hpp
include/Axiom/Experimental/Legacy/: GameStateSystem.hpp
include/Axiom/Game/: GameContext.hpp  GameLayer.hpp  PowerSystem.hpp  UISystem.hpp
include/Axiom/Input/: Input.hpp
include/Axiom/Math/: Vec2.hpp
include/Axiom/Renderer/: Camera.hpp  Camera2D.hpp  RenderCommand.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp
include/Axiom/Renderer/API/OpenGL/: OpenGLRenderer.hpp
include/Axiom/Resource/: AssetRegistry.hpp  ResourceManager.hpp
include/Axiom/Runtime/: RuntimeSession.hpp
include/Axiom/Scene/: AnimationComponent.hpp  ColliderComponent.hpp  Component.hpp  Entity.hpp  MovementComponent.hpp  RenderComponent.hpp  Scene.hpp  SceneManager.hpp  SceneSerializer.hpp  SpriteComponent.hpp  TextureComponent.hpp  Transform.hpp
include/Axiom/Scene/Components/: AnimationComponent.hpp  ColliderComponent.hpp  MovementComponent.hpp  PlayerControllerComponent.hpp  PlayerTag.hpp  SpriteComponent.hpp  TimerComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
include/Axiom/Scene/Systems/: CameraFollowSystem.hpp  CollisionSystem.hpp  MovementSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  TimerSystem.hpp
src/: main.cpp
src/Camera/: Camera.cpp  Camera2D.cpp
src/Core/: Application.cpp  Engine.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Time.cpp  Window.cpp
src/DebugTools/: AssetBrowserPanel.cpp  ConsolePanel.cpp  DebugOverlay.cpp  DebugRenderer.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  SceneEditorPanel.cpp  StatisticsPanel.cpp
src/Editor/: EditorContext.cpp  EditorFontManager.cpp  EditorUI.cpp
src/Editor/Panels/: AssetBrowserPanel.cpp  ConsolePanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  PreferencesPanel.cpp  SceneEditorPanel.cpp  StatisticsPanel.cpp
src/Editor/Viewport/: Framebuffer.cpp  ViewportPanel.cpp
src/Game/: GameLayer.cpp
src/Input/: Input.cpp
src/Platform/GLFW/: Window.cpp
src/Renderer/: Camera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Renderer/API/OpenGL/: OpenGLRenderer.cpp
src/Renderer/API/OpenGL/Graphics/: Shader.cpp  Texture.cpp
src/Resource/: AssetRegistry.cpp  ResourceManager.cpp
src/Runtime/: RuntimeSession.cpp
src/Scene/: Scene.cpp  SceneManager.cpp  SceneSerializer.cpp
src/Scene/Systems/: CameraFollowSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp  TimerSystem.cpp
